@@ -50,6 +50,16 @@ public class JavaConventions {
 
   private static final List<String> TEST_COMPILER_ARGS;
 
+  /**
+   * The Java version we should use as the JVM baseline for building the project
+   */
+  private static final JavaLanguageVersion DEFAULT_LANGUAGE_VERSION = JavaLanguageVersion.of(24);
+
+  /**
+   * The Java version we should use as the baseline for the compiled bytecode (the "-release" compiler argument)
+   */
+  private static final JavaLanguageVersion DEFAULT_RELEASE_VERSION = JavaLanguageVersion.of(17);
+
   static {
     List<String> commonCompilerArgs = List.of(
             /*"-Xlint:serial",*/ "-Xlint:cast", "-Xlint:classfile",/* "-Xlint:dep-ann",*/
@@ -59,7 +69,7 @@ public class JavaConventions {
     );
     COMPILER_ARGS = new ArrayList<>();
     COMPILER_ARGS.addAll(commonCompilerArgs);
-    COMPILER_ARGS.addAll(Arrays.asList(
+    COMPILER_ARGS.addAll(List.of(
             /* "-Xlint:varargs",*/ "-Xlint:fallthrough" // , "-Xlint:rawtypes" // "-Xlint:deprecation",
             // "-Xlint:unchecked"/*, "-Werror"*/
     ));
@@ -71,8 +81,21 @@ public class JavaConventions {
 
   public void apply(Project project) {
     project.getPlugins().withType(JavaBasePlugin.class, javaPlugin -> {
+      applyToolchainConventions(project);
       applyJavaCompileConventions(project);
       configureDependencyManagement(project);
+    });
+  }
+
+  /**
+   * Configure the Toolchain support for the project.
+   *
+   * @param project the current project
+   */
+  private static void applyToolchainConventions(Project project) {
+    project.getExtensions().getByType(JavaPluginExtension.class).toolchain(toolchain -> {
+//			toolchain.getVendor().set(JvmVendorSpec.BELLSOFT);
+      toolchain.getLanguageVersion().set(DEFAULT_LANGUAGE_VERSION);
     });
   }
 
@@ -83,21 +106,41 @@ public class JavaConventions {
    * @param project the current project
    */
   private void applyJavaCompileConventions(Project project) {
-    project.getExtensions().getByType(JavaPluginExtension.class)
-            .getToolchain().getLanguageVersion().set(JavaLanguageVersion.of(17));
-    project.getTasks().withType(JavaCompile.class)
-            .matching(compileTask -> compileTask.getName().equals(JavaPlugin.COMPILE_JAVA_TASK_NAME))
-            .forEach(compileTask -> {
-              compileTask.getOptions().setCompilerArgs(COMPILER_ARGS);
-              compileTask.getOptions().setEncoding("UTF-8");
-            });
-    project.getTasks().withType(JavaCompile.class)
-            .matching(compileTask -> compileTask.getName().equals(JavaPlugin.COMPILE_TEST_JAVA_TASK_NAME)
-                    || compileTask.getName().equals("compileTestFixturesJava"))
-            .forEach(compileTask -> {
-              compileTask.getOptions().setCompilerArgs(TEST_COMPILER_ARGS);
-              compileTask.getOptions().setEncoding("UTF-8");
-            });
+    project.afterEvaluate(p -> {
+      p.getTasks().withType(JavaCompile.class)
+              .matching(compileTask -> compileTask.getName().startsWith(JavaPlugin.COMPILE_JAVA_TASK_NAME))
+              .forEach(compileTask -> {
+                compileTask.getOptions().setCompilerArgs(COMPILER_ARGS);
+                compileTask.getOptions().setEncoding("UTF-8");
+                setJavaRelease(compileTask);
+              });
+      p.getTasks().withType(JavaCompile.class)
+              .matching(compileTask -> compileTask.getName().startsWith(JavaPlugin.COMPILE_TEST_JAVA_TASK_NAME)
+                      || compileTask.getName().equals("compileTestFixturesJava"))
+              .forEach(compileTask -> {
+                compileTask.getOptions().setCompilerArgs(TEST_COMPILER_ARGS);
+                compileTask.getOptions().setEncoding("UTF-8");
+                setJavaRelease(compileTask);
+              });
+
+    });
+  }
+
+  /**
+   * We should pick the {@link #DEFAULT_RELEASE_VERSION} for all compiled classes,
+   * unless the current task is compiling multi-release JAR code with a higher version.
+   */
+  private void setJavaRelease(JavaCompile task) {
+    int defaultVersion = DEFAULT_RELEASE_VERSION.asInt();
+    int releaseVersion = defaultVersion;
+    int compilerVersion = task.getJavaCompiler().get().getMetadata().getLanguageVersion().asInt();
+    for (int version = defaultVersion; version <= compilerVersion; version++) {
+      if (task.getName().contains("Java" + version)) {
+        releaseVersion = version;
+        break;
+      }
+    }
+    task.getOptions().getRelease().set(releaseVersion);
   }
 
   private void configureDependencyManagement(Project project) {
